website/versioned_docs/version-2.0.0-alpha.11/react-native.baseapiclient.md
---
id: version-2.0.0-alpha.11-react-native.baseapiclient
title: BaseAPIClient class
hide_title: true
original_id: react-native.baseapiclient
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## BaseAPIClient class


<b>Signature:</b>

```typescript
export declare abstract class BaseAPIClient 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(options)](./react-native.baseapiclient._constructor_.md) |  | Constructs a new instance of the <code>BaseAPIClient</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [apiKey](./react-native.baseapiclient.apikey.md) |  | <code>string</code> |  |
|  [endpoint](./react-native.baseapiclient.endpoint.md) |  | <code>string</code> |  |
|  [fetchFunction](./react-native.baseapiclient.fetchfunction.md) |  | <code>typeof fetch</code> |  |
|  [getExtraSessionInfo](./react-native.baseapiclient.getextrasessioninfo.md) |  | <code>() =&gt; Promise&lt;JSONObject &#124; null&gt;</code> |  |
|  [refreshTokenFunction](./react-native.baseapiclient.refreshtokenfunction.md) |  | <code>() =&gt; Promise&lt;boolean&gt;</code> |  |
|  [requestClass](./react-native.baseapiclient.requestclass.md) |  | <code>typeof Request</code> |  |
|  [userAgent](./react-native.baseapiclient.useragent.md) |  | <code>string</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [changePassword(newPassword, oldPassword)](./react-native.baseapiclient.changepassword.md) |  |  |
|  [del(path, options)](./react-native.baseapiclient.del.md) |  |  |
|  [deleteOAuthProvider(providerID)](./react-native.baseapiclient.deleteoauthprovider.md) |  |  |
|  [fetch(input, init, options)](./react-native.baseapiclient.fetch.md) |  |  |
|  [get(path, options)](./react-native.baseapiclient.get.md) |  |  |
|  [getSession(id)](./react-native.baseapiclient.getsession.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./react-native.baseapiclient.linkoauthproviderwithaccesstoken.md) |  |  |
|  [listSessions()](./react-native.baseapiclient.listsessions.md) |  |  |
|  [login(loginID, password, options)](./react-native.baseapiclient.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./react-native.baseapiclient.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./react-native.baseapiclient.loginwithcustomtoken.md) |  |  |
|  [logout()](./react-native.baseapiclient.logout.md) |  |  |
|  [me()](./react-native.baseapiclient.me.md) |  |  |
|  [oauthAuthorizationURL(providerID, options)](./react-native.baseapiclient.oauthauthorizationurl.md) |  |  |
|  [post(path, options)](./react-native.baseapiclient.post.md) |  |  |
|  [postAndReturnAuthResponse(path, options)](./react-native.baseapiclient.postandreturnauthresponse.md) |  |  |
|  [prepareHeaders()](./react-native.baseapiclient.prepareheaders.md) |  |  |
|  [refresh(refreshToken)](./react-native.baseapiclient.refresh.md) |  |  |
|  [request(method, path, options)](./react-native.baseapiclient.request.md) |  |  |
|  [requestEmailVerification(email)](./react-native.baseapiclient.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./react-native.baseapiclient.requestforgotpasswordemail.md) |  |  |
|  [resetPassword(form)](./react-native.baseapiclient.resetpassword.md) |  |  |
|  [revokeOtherSessions()](./react-native.baseapiclient.revokeothersessions.md) |  |  |
|  [revokeSession(id)](./react-native.baseapiclient.revokesession.md) |  |  |
|  [signup(loginIDs, password, options)](./react-native.baseapiclient.signup.md) |  |  |
|  [updateMetadata(metadata)](./react-native.baseapiclient.updatemetadata.md) |  |  |
|  [updateSession(id, patch)](./react-native.baseapiclient.updatesession.md) |  |  |
|  [verifyWithCode(code)](./react-native.baseapiclient.verifywithcode.md) |  |  |

